# rust-basic

./: .gitignore  README.md
01-hello_rust/hello_cargo/: Cargo.toml
02-guessing_game/guessing_game/: Cargo.toml
03-basic/if_while/: Cargo.toml
03/celsius_fahrenheit/: Cargo.toml
03/fibonacci/: Cargo.toml
03/function/: Cargo.toml
03/the_twelve_days_of_christmas/: Cargo.toml
03/variables/: Cargo.toml
04-ownership/ownership/: Cargo.toml
04/ownership_function/: Cargo.toml
05-struct/user_struct/: Cargo.toml
06-enum/ip_enum/: Cargo.toml
06-enum/match_coin/: Cargo.toml
06-enum/option/: Cargo.toml
07-module/communicator/: Cargo.toml
07-module/importing_names/: Cargo.toml
07-module/privacy_mod/: Cargo.toml
08-collection/hashmap_basic/: Cargo.toml
08-collection/mean_median_mode/: Cargo.toml
08-collection/pig_latin/: Cargo.toml
08-collection/string_basic/: Cargo.toml
08-collection/text_interface/: Cargo.toml
08-collection/vector_basic/: Cargo.toml
09-exception/panic_basic/: Cargo.toml
09-exception/result_basic/: Cargo.toml  hello.txt
10-generic/generic_struct/: Cargo.toml
10-generic/life_time/: Cargo.toml
10-generic/remove_duplication/: Cargo.toml
10-generic/trait_basic/: Cargo.toml
11-testing/adder/: Cargo.toml
11-testing/rectangle_struct/: Cargo.toml
12-io_project/greprs/: Cargo.toml  poem.txt
13-functional/closure_basic/: Cargo.toml
13-functional/iterator/: Cargo.toml
14-cargo/art/: Cargo.toml
14-cargo/art/src/: lib.rs
14-cargo/my_crate/: Cargo.toml
rmsubgit/: Cargo.toml  READ.mb  README.md
(+59 files in other folders)
