[package]
name = "art010"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Youngho Cho <dominoyh5@gmail.com>"]
description = "A fun game where you guess what number the computer has chosen."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
